src/objects/DSCORGPKG__DiscoverOrg_Custom_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Add__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__BlankOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BlankOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Default_Salesforce_Field__c</fullName>
        <label>Default Salesforce Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__DiscoverOrg_Field__c</fullName>
        <label>DiscoverOrg Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__NightlyJob__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NightlyJob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Object_Name__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Salesforce_Field__c</fullName>
        <label>Salesforce Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isConflict__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isConflict</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isEditable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isEditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__isVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isVisible</label>
        <type>Checkbox</type>
    </fields>
    <label>DiscoverOrg Custom Mapping</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>DiscoverOrg Custom Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Custom Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>